# programming-competitions

./: .gitignore  README.md
aoc/: .gitignore  README.adoc
aoc/2021/01/: Cargo.toml
aoc/2021/01/src/: main.rs
aoc/2021/02/: aoc-2021-02.sh
aoc/2021/03/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  main.cc
aoc/2021/04/: bin.go  bin_test.go  go.mod
aoc/2022/01/: calories-parsums.awk  calories.awk
aoc/2022/02/: t1.awk  t2.awk
aoc/2022/03/: first  items  second  t1-translate.awk  t1.awk  t1.cpp  t1.sh  t2.cpp  t2.py  t3.py
aoc/2022/04/: d4t1.py  d4t2.py
aoc/2022/05/: d5t2.py
aoc/2022/06/: d5t1.py
aoc/2022/07/: d7t1.py  d7t2.py
aoc/2022/08/: d8t1.py  d8t1alt.py
aoc/2023/01/: main.ts
aoc/2023/02/: main.ts
aoc/2023/03/: main.ts  sample
aoc/2023/04/: main.ts
aoc/2023/05-/: d5.test.ts  d5.ts  d6.test.ts  d6.ts  lib.ts
aoc/2024/01/: .gitignore  README.md  t1.sh  t2.sh  t2o.sh
aoc/2024/02/: main.kt  main.kts
aoc/2024/03/: main.kt
aoc/2024/04/: main.kt
aoc/2024/05/: main.kt
aoc/2024/06/: main.kt
aoc/2024/07/: main.kt
aoc/2024/08/: main.kt
aoc/2024/09/: main.kt
aoc/2024/10/: main.kt
aoc/2024/11/: main.kt
aoc/2024/12/: main.kt
aoc/2025/01/: main.go  t2b.go  task.txt
aoc/2025/02/: d2.go  d2_test.go  d2b.go  d2b_test.go  go.mod
aoc/2025/03/: d3.go  d3_test.go
kickstart/2022/A/01-speed/: Makefile  main.cpp  sample
kickstart/2022/A/02-nine/: main.cpp  output  sample
kickstart/2022/B/01-infinity/: main.cpp  output  sample
kickstart/2022/docker/: golang-buster.dockerfile
(+28 files in other folders)
